multi: add SendOnion like functionality to existing or new rpc
TODO: Add Erik as co-author
