# lnrpc/routerrpc/router.swagger.json
@@ -1820,6 +1820,11 @@
         "skip_temp_err": {
           "type": "boolean",
           "description": "Whether the payment should be marked as failed when a temporary error is\nreturned from the given route. Set it to true so the payment won't be\nfailed unless a terminal error is occurred, such as payment timeout, no\nroutes, incorrect payment details, or insufficient funds."
+        },
+        "onion_blob": {
+          "type": "string",
+          "format": "byte",
+          "description": "Custom onion blob. Limited to 1366 bytes. This will be used instead of the\nstandard generated sphinx package when forwarding an HTLC."
         }
       }
     },
