# lnrpc/routerrpc/router_server.go
@@ -821,8 +821,16 @@ func timelockAndFee(p *lnrpc.Payment) (int64, int64, error) {
 func (s *Server) SendToRouteV2(ctx context.Context,
 	req *SendToRouteRequest) (*lnrpc.HTLCAttempt, error) {
 
+	// NOTE(calvin): Do we expect the route to be empty when an onion
+	// is provided? I suppose we could force callers to provide both, though
+	// it does not seem technically necessary.
 	if req.Route == nil {
 		return nil, fmt.Errorf("unable to send, no routes provided")
+	}
+
+	if len(req.OnionBlob) > lnwire.OnionPacketSize {
+		return nil, fmt.Errorf("the provided onion blob is to large, "+
+			"size is limited to %d bytes", lnwire.OnionPacketSize)
 	}
 
 	route, err := s.cfg.RouterBackend.UnmarshallRoute(req.Route)
@@ -844,9 +852,13 @@ func (s *Server) SendToRouteV2(ctx context.Context,
 	// case, we give precedence to the attempt information as stored in the
 	// db.
 	if req.SkipTempErr {
-		attempt, err = s.cfg.Router.SendToRouteSkipTempErr(hash, route)
+		attempt, err = s.cfg.Router.SendToRouteSkipTempErr(
+			hash, route, req.OnionBlob,
+		)
 	} else {
-		attempt, err = s.cfg.Router.SendToRoute(hash, route)
+		attempt, err = s.cfg.Router.SendToRoute(
+			hash, route, req.OnionBlob,
+		)
 	}
 	if attempt != nil {
 		rpcAttempt, err := s.cfg.RouterBackend.MarshalHTLCAttempt(
